feat: "fix somethings related to admin api"